--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -35,8 +35,8 @@ jobs:
         allure_history: allure-history
 
     - name: Deploy report to Github Pages
+      if: always()
       uses: peaceiris/actions-gh-pages@v3
-      if: ${{ github.ref == 'refs/heads/master' }}
       with:
         PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
