--- a/.github/workflows/allure-report.yml
+++ b/.github/workflows/allure-report.yml
@@ -12,6 +12,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
     - run: npm run test
 
     - name: Get Allure history
