--- a/.github/workflows/playwright-allure-result.yml
+++ b/.github/workflows/playwright-allure-result.yml
@@ -40,4 +40,4 @@ jobs:
       with:
         PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: allure-results
+        PUBLISH_DIR: allure-history
